--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@nestjs/core": "^6.7.2",
     "@nestjs/platform-express": "^6.7.2",
     "@nestjs/swagger": "^4.1.2",
+    "@yggdrasilts/volundr": "git+https://github.com/yggdrasilts/volundr.git",
     "class-transformer": "^0.2.3",
     "class-validator": "^0.11.0",
     "imagemin": "^7.0.1",
