--- a/package.json
+++ b/package.json
@@ -5,14 +5,15 @@
   "author": "David López <davidlopez.david@gmail.com>",
   "license": "MIT",
   "scripts": {
-    "prebuild": "rimraf dist",
     "build": "nest build",
+    "clean:all": "rimraf node_modules dist package-lock.json",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
+    "lint": "tslint -p tsconfig.json -c tslint.json",
+    "prebuild": "rimraf dist",
     "start": "nest start",
     "start:dev": "nest start -w --webpack --webpackPath webpack.config.js",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
-    "lint": "tslint -p tsconfig.json -c tslint.json",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
