--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "echarts",
   "version": "1.0.0",
-  "description": "",
+  "description": "Service that use echartsjs to get images as file.",
   "author": "David López <davidlopez.david@gmail.com>",
   "license": "MIT",
   "scripts": {
@@ -26,7 +26,7 @@
     "@nestjs/core": "^6.7.2",
     "@nestjs/platform-express": "^6.7.2",
     "@nestjs/swagger": "^4.1.2",
-    "@yggdrasilts/volundr": "git+https://github.com/yggdrasilts/volundr.git",
+    "@yggdrasilts/volundr": "^0.1.6",
     "class-transformer": "^0.2.3",
     "class-validator": "^0.11.0",
     "imagemin": "^7.0.1",
