--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@nestjs/core": "^6.7.2",
     "@nestjs/platform-express": "^6.7.2",
     "@nestjs/swagger": "^4.1.2",
+    "@yggdrasilts/axiosfit": "^0.6.1",
     "@yggdrasilts/volundr": "^0.1.6",
     "class-transformer": "^0.2.3",
     "class-validator": "^0.11.0",
