--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@yggdrasilts/volundr": "^0.1.8",
     "class-transformer": "^0.2.3",
     "class-validator": "^0.11.0",
+    "fs-extra": "^8.1.0",
     "imagemin": "^7.0.1",
     "imagemin-jpegtran": "^6.0.0",
     "imagemin-pngquant": "^8.0.0",
@@ -45,6 +46,7 @@
     "@nestjs/testing": "^6.7.1",
     "@types/echarts": "^4.4.2",
     "@types/express": "^4.17.1",
+    "@types/fs-extra": "^8.0.1",
     "@types/hapi__joi": "^16.0.6",
     "@types/imagemin": "^7.0.0",
     "@types/jest": "^24.0.18",
